@@ -37,6 +37,7 @@ int JackSocketNotifyChannel::Open(const char* name)
     }
     
     // Use a time out for notifications
+    fNotifySocket.SetWriteTimeOut(SOCKET_TIME_OUT);
     fNotifySocket.SetReadTimeOut(SOCKET_TIME_OUT);
     return 0;
 }
@@ -55,7 +56,7 @@ void JackSocketNotifyChannel::ClientNotify(int refnum, const char* name, int not
     // Send notification
     if (event.Write(&fNotifySocket) < 0) {
         jack_error("Could not write notification");
-        fNotifySocket.Close();
+        //fNotifySocket.Close();
         *result = -1;
         return;
     }
@@ -64,8 +65,8 @@ void JackSocketNotifyChannel::ClientNotify(int refnum, const char* name, int not
     if (sync) {
         // Get result : use a time out
         if (res.Read(&fNotifySocket) < 0) {
-            jack_error("Could not read result");
-            fNotifySocket.Close();
+            jack_error("Could not read notification result");
+            //fNotifySocket.Close();
             *result = -1;
         } else {
             *result = res.fResult;
